skaffold_test/hello/deployment/app.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-v1
  namespace: feature
  labels:
    app: hello
    version: v1
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: hello
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
  namespace: feature
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      containers:
        - name: hello
          image: hello
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          resources: {}
