skaffold_test/hello/deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  namespace: feature
  labels:
    app: hello
    version: v1
  annotations:
    kubernetes.io/ingress.class: com-kong
spec:
  rules:
    - http:
        paths:
          - path: /hello
            backend:
              serviceName: hello-v1
              servicePort: 8081
